add entity framework and nlog

--- a/Pet project/appsettings.json
+++ b/Pet project/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PetProjectDb": "Server=desktop-vrbeq21\\sqlexpress;Database=PetProject;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
