--- a/Pet project.Data/Pet project.Data.csproj
+++ b/Pet project.Data/Pet project.Data.csproj
@@ -5,4 +5,10 @@
     <RootNamespace>Pet_project.Data</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="5.1.1" />
+  </ItemGroup>
+
 </Project>
