--- a/Pet project/appsettings.json
+++ b/Pet project/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PetProjectDb": "Server=desktop-vrbeq21\\sqlexpress;Database=PetProject;Trusted_Connection=True"
+    "PetProjectDb": "Server=DESKTOP-VRBEQ21\\SQLEXPRESS;Database=PetProject;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
