--- a/Pet project/Pet project.Web.csproj
+++ b/Pet project/Pet project.Web.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="ClientApp\src\components\" />
   </ItemGroup>
 
   <ItemGroup>
