--- a/Pet project/ClientApp/package.json
+++ b/Pet project/ClientApp/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "~5.3.0",
     "reactstrap": "~8.10.1",
     "redux": "4.1.2",
-    "redux-thunk": "2.4.1"
+    "redux-thunk": "2.4.1",
+    "sass": "1.58.3"
   },
   "devDependencies": {
     "@types/history": "4.7.10",
@@ -32,7 +33,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "nan": "^2.15.0",
     "react-scripts": "^5.0.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "sass": "1.58.3"
   },
   "scripts": {
     "start": "react-scripts start",
