--- a/Pet project/Pet project.Web.csproj
+++ b/Pet project/Pet project.Web.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
   </ItemGroup>
 
